--- a/aaryan.ipynb
+++ b/aaryan.ipynb
@@ -37,9 +37,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'genai' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexample.mov\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m video_file \u001b[38;5;241m=\u001b[39m \u001b[43mgenai\u001b[49m\u001b[38;5;241m.\u001b[39mupload_file(path\u001b[38;5;241m=\u001b[39mfile_path)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(video_file)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'genai' is not defined"
+     ]
+    }
+   ],
    "source": [
     "file_path = \"example.mov\"\n",
     "video_file = genai.upload_file(path=file_path)"
@@ -215,6 +227,124 @@
    ],
    "source": [
     "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## Building a Procrastination Combat App (Mac)\n",
+      "\n",
+      "This breakdown assumes basic knowledge of macOS development (SwiftUI, AVFoundation, etc.). \n",
+      "\n",
+      "**I. Project Setup & Base Features (2-3 weeks)**\n",
+      "\n",
+      "1. **Set up Xcode Project:**\n",
+      "   - Create a new macOS application project using SwiftUI.\n",
+      "   - Add necessary dependencies:\n",
+      "     - **AVFoundation:** For screen recording.\n",
+      "     - **Vision Framework:** For analyzing screen content (optional).\n",
+      "     - **Core ML:** For integrating your multimodal model (if you're using one).\n",
+      "   - Design basic UI:\n",
+      "     - Start button for recording.\n",
+      "     - Time counter.\n",
+      "     - Progress bar for task duration.\n",
+      "     - Option to set task name and duration.\n",
+      "     - UI for reviewing recordings (optional).\n",
+      "   - (Estimated time: 2 days)\n",
+      "\n",
+      "2. **Implement Screen Recording:**\n",
+      "   - Use `AVFoundation` to capture screen content (capture window, specific region, or the whole screen).\n",
+      "   - Set up recording parameters:\n",
+      "     - Frame rate, codec, resolution, etc.\n",
+      "   - Handle recording start/stop, save recorded videos to a designated location.\n",
+      "   - Display a notification to the user when recording is on/off.\n",
+      "   - (Estimated time: 3 days)\n",
+      "\n",
+      "3. **Create Basic Task Management:**\n",
+      "   - Implement a simple task management system:\n",
+      "     - Add new tasks with titles and durations.\n",
+      "     - Display tasks in a list.\n",
+      "     - Mark tasks as completed.\n",
+      "     - (Estimated time: 2 days)\n",
+      "\n",
+      "**II. Multimodal Model Integration (4-6 weeks)**\n",
+      "\n",
+      "4. **Choose a Multimodal Model:**\n",
+      "   - Decide on the type of multimodal model:\n",
+      "     - **Pre-trained model:** Explore available models (e.g., OpenAI's multimodal models, Google's Vision API).\n",
+      "     - **Custom trained model:** Develop your own model using tools like TensorFlow or PyTorch.\n",
+      "   - (Estimated time: 3 days)\n",
+      "\n",
+      "5. **Integrate the Model:**\n",
+      "   - Set up a communication channel between your app and the model (e.g., API calls, local model integration).\n",
+      "   - Prepare input for the model:\n",
+      "     - Convert screen recording data (video frames, audio) into a format suitable for the model.\n",
+      "     - (Estimated time: 5-7 days)\n",
+      "\n",
+      "6. **Interpret Model Output:**\n",
+      "   - Process the model's response:\n",
+      "     - Interpret the output (e.g., labels, confidence scores, predictions).\n",
+      "     - Use this information to determine if the user is on task or not.\n",
+      "     - (Estimated time: 5-7 days)\n",
+      "\n",
+      "**III. Building the User Interface & Functionality (3-4 weeks)**\n",
+      "\n",
+      "7. **Enhance User Interface:**\n",
+      "   - Add visual feedback during recording:\n",
+      "     - Display on-screen indicators to show the recording status.\n",
+      "     - Provide real-time progress visualization based on model output.\n",
+      "   - Design an engaging UI to motivate users:\n",
+      "     - Use gamification elements (e.g., points, badges).\n",
+      "     - Provide statistics and insights.\n",
+      "   - (Estimated time: 5 days)\n",
+      "\n",
+      "8. **Implement On-Task Tracking:**\n",
+      "   - Use the model's output to track if the user is focused on the task:\n",
+      "     - Display warnings or alerts when the model detects procrastination.\n",
+      "     - Offer suggestions to get back on track (e.g., break timers, task switching recommendations).\n",
+      "   - (Estimated time: 5 days)\n",
+      "\n",
+      "9. **Add Additional Features (Optional):**\n",
+      "   - Implement time tracking.\n",
+      "   - Allow users to adjust sensitivity settings.\n",
+      "   - Integrate with other productivity tools.\n",
+      "   - (Estimated time: 2-3 days)\n",
+      "\n",
+      "**IV. Testing & Refinement (1-2 weeks)**\n",
+      "\n",
+      "10. **Thorough Testing:**\n",
+      "   - Test the app on different macOS versions.\n",
+      "   - Conduct user testing to gather feedback.\n",
+      "   - Identify and fix bugs.\n",
+      "   - (Estimated time: 1 week)\n",
+      "\n",
+      "11. **Polishing and Deployment:**\n",
+      "   - Optimize performance.\n",
+      "   - Finalize UI/UX.\n",
+      "   - Prepare the app for submission to the Mac App Store.\n",
+      "   - (Estimated time: 1 week)\n",
+      "\n",
+      "**Overall Timeline:**\n",
+      "\n",
+      "This estimate is based on a single developer working full-time. The actual time needed will depend on your experience, the complexity of the chosen model, and the scope of your app. \n",
+      "\n",
+      "**Note:** \n",
+      "- **Multimodal Model:** The time needed for this section heavily depends on your choice of model. Using a pre-trained model might be faster, while developing a custom model would take significantly longer.\n",
+      "- **User Interface:** The time for UI design and implementation will depend on your design skills and the complexity of the features you wish to add.\n",
+      "\n",
+      "This breakdown provides a roadmap to creating a native Mac app to combat procrastination. Remember to focus on user experience and create a tool that is helpful and enjoyable to use. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"## Building a Procrastination Combat App (Mac)\\n\\nThis breakdown assumes basic knowledge of macOS development (SwiftUI, AVFoundation, etc.). \\n\\n**I. Project Setup & Base Features (2-3 weeks)**\\n\\n1. **Set up Xcode Project:**\\n   - Create a new macOS application project using SwiftUI.\\n   - Add necessary dependencies:\\n     - **AVFoundation:** For screen recording.\\n     - **Vision Framework:** For analyzing screen content (optional).\\n     - **Core ML:** For integrating your multimodal model (if you're using one).\\n   - Design basic UI:\\n     - Start button for recording.\\n     - Time counter.\\n     - Progress bar for task duration.\\n     - Option to set task name and duration.\\n     - UI for reviewing recordings (optional).\\n   - (Estimated time: 2 days)\\n\\n2. **Implement Screen Recording:**\\n   - Use `AVFoundation` to capture screen content (capture window, specific region, or the whole screen).\\n   - Set up recording parameters:\\n     - Frame rate, codec, resolution, etc.\\n   - Handle recording start/stop, save recorded videos to a designated location.\\n   - Display a notification to the user when recording is on/off.\\n   - (Estimated time: 3 days)\\n\\n3. **Create Basic Task Management:**\\n   - Implement a simple task management system:\\n     - Add new tasks with titles and durations.\\n     - Display tasks in a list.\\n     - Mark tasks as completed.\\n     - (Estimated time: 2 days)\\n\\n**II. Multimodal Model Integration (4-6 weeks)**\\n\\n4. **Choose a Multimodal Model:**\\n   - Decide on the type of multimodal model:\\n     - **Pre-trained model:** Explore available models (e.g., OpenAI's multimodal models, Google's Vision API).\\n     - **Custom trained model:** Develop your own model using tools like TensorFlow or PyTorch.\\n   - (Estimated time: 3 days)\\n\\n5. **Integrate the Model:**\\n   - Set up a communication channel between your app and the model (e.g., API calls, local model integration).\\n   - Prepare input for the model:\\n     - Convert screen recording data (video frames, audio) into a format suitable for the model.\\n     - (Estimated time: 5-7 days)\\n\\n6. **Interpret Model Output:**\\n   - Process the model's response:\\n     - Interpret the output (e.g., labels, confidence scores, predictions).\\n     - Use this information to determine if the user is on task or not.\\n     - (Estimated time: 5-7 days)\\n\\n**III. Building the User Interface & Functionality (3-4 weeks)**\\n\\n7. **Enhance User Interface:**\\n   - Add visual feedback during recording:\\n     - Display on-screen indicators to show the recording status.\\n     - Provide real-time progress visualization based on model output.\\n   - Design an engaging UI to motivate users:\\n     - Use gamification elements (e.g., points, badges).\\n     - Provide statistics and insights.\\n   - (Estimated time: 5 days)\\n\\n8. **Implement On-Task Tracking:**\\n   - Use the model's output to track if the user is focused on the task:\\n     - Display warnings or alerts when the model detects procrastination.\\n     - Offer suggestions to get back on track (e.g., break timers, task switching recommendations).\\n   - (Estimated time: 5 days)\\n\\n9. **Add Additional Features (Optional):**\\n   - Implement time tracking.\\n   - Allow users to adjust sensitivity settings.\\n   - Integrate with other productivity tools.\\n   - (Estimated time: 2-3 days)\\n\\n**IV. Testing & Refinement (1-2 weeks)**\\n\\n10. **Thorough Testing:**\\n   - Test the app on different macOS versions.\\n   - Conduct user testing to gather feedback.\\n   - Identify and fix bugs.\\n   - (Estimated time: 1 week)\\n\\n11. **Polishing and Deployment:**\\n   - Optimize performance.\\n   - Finalize UI/UX.\\n   - Prepare the app for submission to the Mac App Store.\\n   - (Estimated time: 1 week)\\n\\n**Overall Timeline:**\\n\\nThis estimate is based on a single developer working full-time. The actual time needed will depend on your experience, the complexity of the chosen model, and the scope of your app. \\n\\n**Note:** \\n- **Multimodal Model:** The time needed for this section heavily depends on your choice of model. Using a pre-trained model might be faster, while developing a custom model would take significantly longer.\\n- **User Interface:** The time for UI design and implementation will depend on your design skills and the complexity of the features you wish to add.\\n\\nThis breakdown provides a roadmap to creating a native Mac app to combat procrastination. Remember to focus on user experience and create a tool that is helpful and enjoyable to use. \\n\")"
    ]
   },
   {
